# clique-homology

./: .gitignore  README.md  c_elegans_analysis.py  pyproject.toml
cpp/: CMakeLists.txt
cpp/src/graph/: graph.cpp  permuted_graph.cpp
cpp/src/internal/: data_types.hpp  graph.hpp  matrix.h  maximal_cliques.cpp  maximal_cliques.hpp  sparse_matrix.hpp
cpp/src/main/: betti.cpp
cpp/src/topology/: boundary_maps.cpp  matrix.cpp  matrix2.cpp
cpp/tests/: test_matrix.cpp  test_maximal_cliques.cpp
docs/: C++Architecture.md  CHANGE_SUMMARY.md  CONTRACT.md  CPP_DIAGRAM.excalidraw  NEW_CONTRACT.md  Rdemo.R  complexity.py  demo.ipynb  demo2.ipynb  src_illustrations.ipynb  validation.ipynb  validation_script.py  wrangling.ipynb
docs/data/: C-elegans-frontal.csv  SI 5 Connectome adjacency matrices, corrected July 2020.xlsx  c_elegans_colors.py  c_elegans_edges.py  celegans_colors.txt  celegans_edges.txt  celegans_graph.txt  maleChemicalAdjMatrix.csv  maleChemicalFunctionGroupColoring.csv  maleChemicalFunctionGroupColoringByColumn.xlsx  null_distribution_celegans.csv  ~$SI 5 Connectome adjacency matrices, corrected July 2020.xlsx
src/: betti_numbers.py  test_betti_numbers.py
src/clique_homology/: __init__.py  betti_numbers.py  betti_numbers_api.py
src/clique_homology/data_model/: data_api.py  data_model.py
src/clique_homology/stats_engine/: betti_numbers.py  betti_numbers_api.py  null_distribution.py  p_val_sanity_check.py  p_values.py  random_coloring.py  stats_engine.py
src/clique_homology/visualization/: generate_statistical_histogram.py  generate_test_data.py  jupyter_plotly_visualization.ipynb  plotly_visualization.py  test_generate_test_data.py  visualize_colored_graph.py
tests/: test_betti_numbers.py  test_color_contract.py
tests/stats_engine/: conftest.py  test_betti_numbers_core.py  test_null_distribution.py  test_p_values.py  test_random_coloring.py
