[project]
name = "clique-homology"
description = "A tool to calulate the Betti numbers of a network."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "networkx",
    "matplotlib",
    "networkit"
]

[project.scripts]
data_model = "clique_homology.data_model.data_model.py:data_model_cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "scikit-learn",
    "pandas",
    "seaborn"
]